<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG">

    <LinearLayout
        android:id="@+id/task_list_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/yellow_300"
        android:gravity="center_vertical"
        android:elevation="4dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_button"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:onClick="back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/task_list"
            android:textSize="20sp"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calender_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_below="@id/task_list_head">
        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/yellow_300"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="@color/white"
            android:onClick="prev_month"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/weekly_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/weekly_task"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="next_month"
            android:textColor="@color/yellow_300"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_below="@id/calender_head">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/red_300"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textColor="@color/dark_grey"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textColor="@color/dark_grey"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textColor="@color/dark_grey"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textColor="@color/dark_grey"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="@color/dark_grey"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textColor="@color/dark_grey"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calender"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:gravity="center"
        android:layout_below="@id/calendar_subhead">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calender_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="225dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_list_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_below="@id/calender">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_activity"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>
        <ListView
            android:id="@+id/list_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/task_bg"
            android:layout_marginBottom="70dp"/>
        <TextView
            android:id="@+id/no_your_task_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/no_task"
            android:visibility="gone"
            android:textColor="@color/orange_500"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_task_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <Button
            android:id="@+id/add_task_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="NewEvent"
            android:backgroundTint="@color/orange_500" />
    </LinearLayout>
</RelativeLayout>
