<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/BG"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/home_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:progress="0"
        android:elevation="10dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/ic_launcher_background" >
        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/home_icon"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/task_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/task_icon"
            android:layout_weight="1" />
        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/my_profile_icon"
            android:layout_weight="1"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/home_scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_nav">
        <RelativeLayout
            android:id="@+id/home_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">
            <RelativeLayout
                android:id="@+id/task_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/quote"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:elevation="6dp"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="10dp">
                <RelativeLayout
                    android:id="@+id/task_list_upper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10pt"
                    android:paddingRight="10pt">
                    <TextView
                        android:id="@+id/task_list_title"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/task_list_title"
                        android:textColor="@color/dark_grey"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/more_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/task_list_title"
                        android:background="@android:color/transparent"
                        android:text="more"
                        android:textAlignment="center"
                        android:textColor="@color/dark_grey"
                        android:onClick="more"/>
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/task_list_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/task_list_upper"
                    android:layout_marginTop="0dp" />
                <TextView
                    android:id="@+id/no_task_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:layout_below="@id/task_list_upper"
                    android:text="@string/no_task"
                    android:visibility="gone"
                    android:textColor="@color/orange_500"
                    android:fontFamily="@font/nunito"
                    android:textSize="16sp"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_upper"
                android:layout_marginTop="-40dp"
                android:background="@color/white"
                android:elevation="4dp"
                android:orientation="vertical"
                android:paddingLeft="10pt"
                android:paddingTop="50dp"
                android:paddingRight="10pt"
                android:paddingBottom="10dp">
                <TextView
                    android:id="@+id/quote_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/quote_title"
                    android:textColor="@color/dark_grey"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <HorizontalScrollView
                    android:id="@+id/quoteScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@id/quote"
                    android:scrollbars="none">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="2dp">
                        <RelativeLayout
                            android:id="@+id/quote_card_1"
                            android:layout_width="130dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/quote_card"
                            android:elevation="6dp"
                            android:gravity="center"
                            android:padding="10dp">
                            <TextView
                                android:id="@+id/quote_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:backgroundTint="@android:color/transparent"
                                android:text="@string/quote_1"
                                android:textAlignment="center"
                                android:textColor="@color/dark_grey"
                                android:textStyle="italic" />
                            <TextView
                                android:id="@+id/quote_person_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/quote_1"
                                android:layout_marginTop="10dp"
                                android:backgroundTint="@android:color/transparent"
                                android:text="@string/quote_person_1"
                                android:textAlignment="center"
                                android:textColor="@color/dark_grey"
                                android:textStyle="bold" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/quote_card_2"
                            android:layout_width="130dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="10dp"
                            android:layout_toRightOf="@id/quote_card_1"
                            android:background="@drawable/quote_card_2"
                            android:elevation="6dp"
                            android:gravity="center"
                            android:padding="10dp">
                            <TextView
                                android:id="@+id/quote_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:backgroundTint="@android:color/transparent"
                                android:text="@string/quote_2"
                                android:textAlignment="center"
                                android:textColor="@color/dark_grey"
                                android:textStyle="italic" />
                            <TextView
                                android:id="@+id/quote_person_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/quote_2"
                                android:layout_marginTop="10dp"
                                android:backgroundTint="@android:color/transparent"
                                android:text="@string/quote_person_2"
                                android:textAlignment="center"
                                android:textColor="@color/dark_grey"
                                android:textStyle="bold" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/quote_card_3"
                            android:layout_width="130dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="10dp"
                            android:layout_toRightOf="@id/quote_card_2"
                            android:background="@drawable/quote_card"
                            android:elevation="6dp"
                            android:gravity="center"
                            android:padding="10dp">
                            <TextView
                                android:id="@+id/quote_3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:backgroundTint="@android:color/transparent"
                                android:text="@string/quote_3"
                                android:textAlignment="center"
                                android:textColor="@color/dark_grey"
                                android:textStyle="italic" />
                            <TextView
                                android:id="@+id/quote_person_3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/quote_3"
                                android:layout_marginTop="10dp"
                                android:backgroundTint="@android:color/transparent"
                                android:text="@string/quote_person_3"
                                android:textAlignment="center"
                                android:textColor="@color/dark_grey"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </RelativeLayout>
                </HorizontalScrollView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/home_upper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/upper_home"
                android:elevation="10dp"
                android:orientation="vertical"
                android:paddingLeft="10pt"
                android:paddingRight="10pt"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/upper_bar"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:minHeight="70dp"
                    android:orientation="horizontal">
<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:gravity="right"-->
<!--                        android:orientation="horizontal">-->
<!--                        <ImageButton-->
<!--                            android:layout_width="50dp"-->
<!--                            android:layout_height="50dp"-->
<!--                            android:layout_gravity="center_vertical"-->
<!--                            android:background="@android:color/transparent"-->
<!--                            android:scaleType="fitCenter"-->
<!--                            android:src="@drawable/profile_picture" />-->
<!--                    </LinearLayout>-->
                </androidx.appcompat.widget.Toolbar>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginLeft="5pt"
                        android:layout_marginRight="5pt"
                        android:src="@drawable/hello" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_bold_italic"
                            android:text="HELLO"
                            android:textAlignment="textEnd"
                            android:textColor="@color/yellow_500"
                            android:textSize="55sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/name_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_bold"
                            android:text="GOLDIUS"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:textAllCaps="true" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
